Fixed image handling with low-res displays.
From now all the images under the #page element are automatically
resized if they won't fit the display.

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -38,8 +38,6 @@
 }
 
 
-
-
 /**************************************************************
    #header: Holds the site title and header images
  **************************************************************/
@@ -228,7 +226,10 @@ ul.sideMenu {
   padding-bottom: 4em;
 }
 
-
+#page img {
+  max-width: 90%;
+  max-height: 90%;
+}
 
 
 /**************************************************************
